--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,6 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=539CE5B340AEEA6938C271826702F4CA
+ProjectID=AAC53C1F4FC9AE0E7B550D89FF17E131
+ProjectName=Third Person BP Game Template
 
 [StartupActions]
 bAddPacks=True
