--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,18 +1,24 @@
-[URL]
-GameName=Playing
+[/Script/Engine.CollisionProfile]
++Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_11
+MinimumiOSVersion=IOS_12
+
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -21,9 +27,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Playing")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Playing")
-
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-bBuildForArm64=True
++ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/viRearth")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/viRearth")
 
