--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=AAC53C1F4FC9AE0E7B550D89FF17E131
-ProjectName=Third Person BP Game Template
+ProjectID=7F1001A8413B625EEF7B59834D499752
+ProjectName=First Person BP Game Template
 
 [StartupActions]
 bAddPacks=True
