--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,7 +26,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/ARtutorial")
 
 [/Script/Engine.RendererSettings]
-r.Mobile.DisableVertexFog=True
+r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
 r.Mobile.AllowDitheredLODTransition=False
@@ -115,7 +115,7 @@ r.SupportLowQualityLightmaps=True
 r.SupportPointLightWholeSceneShadows=True
 r.SupportAtmosphericFog=True
 r.SupportSkyAtmosphere=True
-r.SupportSkyAtmosphereAffectsHeightFog=False
+r.SupportSkyAtmosphereAffectsHeightFog=True
 r.SkinCache.CompileShaders=False
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
