--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -169,7 +169,7 @@ KeyStore=
 KeyAlias=
 KeyStorePassword=
 KeyPassword=
-bBuildForArmV7=False
+bBuildForArmV7=True
 bBuildForArm64=True
 bBuildForX8664=False
 bBuildForES31=True
